@startuml
skinparam monochrome true
hide methods
hide attributes

abstract class BaseService

class Service

abstract class VirtualService

class AggregatedService

class Timer

class PidController

class Other



BaseService <|-- Service
BaseService <|-- VirtualService

VirtualService <|-- AggregatedService
VirtualService <|-- Timer
VirtualService <|-- PidController
VirtualService <|-- Other

class VirtualServices

class Manager
class PEA

PEA *-- "*" Service
Manager o-- "*" PEA
Manager o-- "1" VirtualServices
VirtualServices *-- "*" VirtualService

AggregatedService o.. BaseService

@enduml
